[tool.poetry]
name = "loss networks"
version = "0.1.0"
description = ""
authors = ["Jeroen van Riel <jeroenvanriel@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7.0"
scikit-learn = "^1.2.1"
numpy = "^1.24.2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
